--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ base_url: "./"
 
 <div class="bs-masthead">
   <div class="container">
-    <h1>Bootstrap 3</h1>
-    <p class="lead">Sleek, intuitive, and powerful mobile-first front-end framework for faster and easier web development.</p>
+    <h1>بوت‌استرپ ۳</h1>
+    <p class="lead">چارچوب قدرتمند، زیبا و چشم‌نواز برای توسعه وب سریع‌تر و آسان‌تر</p>
     <p>
-      <a href="{{ site.download_dist }}" class="btn btn-outline btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Download', 'Download 3.0.0 RC1']);">Download Bootstrap</a>
+      <a href="{{ site.download_dist }}" class="btn btn-outline btn-large" onclick="_gaq.push(['_trackEvent', 'Jumbotron actions', 'Download', 'Download 3.0.0 RC1']);">دانلود بوت‌استرپ</a>
     </p>
   </div>
 </div>
