--- a/javascript.html
+++ b/javascript.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: JavaScript
+title: جاوااسکریپت
 slug: js
-lead: "Bring Bootstrap's components to life with over a dozen custom jQuery plugins. Easily include them all, or one by one."
+lead: "اجزای بوت‌استرپ خود را با پلاگین‌های سفارشی‌شدهٔ جی‌کوئری زنده کنید. به راه راحتی از تمام آن‌ها و یا یکی از آن‌ها استفاده کنید."
 base_url: "../"
 ---
 
@@ -11,10 +11,10 @@ base_url: "../"
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="js-overview">Overview</h1>
+      <h1 id="js-overview">مرور کلی</h1>
     </div>
 
-    <h3 id="js-individual-compiled">Individual or compiled</h3>
+    <h3 id="js-individual-compiled">منحصربه‌فرد یا کامپایل‌شده</h3>
     <p>Plugins can be included individually (using Bootstrap's individual <code>*.js</code> files), or all at once (using <code>bootstrap.js</code> or the minified <code>bootstrap.min.js</code>).</p>
 
     <div class="bs-callout bs-callout-danger">
@@ -27,7 +27,7 @@ base_url: "../"
       <p>Some plugins and CSS components depend on other plugins. If you include plugins individually, make sure to check for these dependencies in the docs. Also note that all plugins depend on jQuery (this means jQuery must be included <strong>before</strong> the plugin files).</p>
     </div>
 
-    <h3 id="js-data-attrs">Data attributes</h3>
+    <h3 id="js-data-attrs">خصوصیت‌های Data</h3>
     <p>You can use all Bootstrap plugins purely through the markup API without writing a single line of JavaScript. This is Bootstrap's first-class API and should be your first consideration when using a plugin.</p>
 
     <p>That said, in some situations it may be desirable to turn this functionality off. Therefore, we also provide the ability to disable the data attribute API by unbinding all events on the document namespaced with <code>data-api</code>. This looks like this:
@@ -40,7 +40,7 @@ $(document).off('.data-api')
 $(document).off('.alert.data-api')
 {% endhighlight %}
 
-    <h3 id="js-programmatic-api">Programmatic API</h3>
+    <h3 id="js-programmatic-api">API قابل برنامه‌ریزی</h3>
     <p>We also believe you should be able to use all Bootstrap plugins purely through the JavaScript API. All public APIs are single, chainable methods, and return the collection acted upon.</p>
 {% highlight js %}
 $(".btn.danger").button("toggle").addClass("fat")
@@ -55,14 +55,14 @@ $("#myModal").modal('show')                // initializes and invokes show immed
 
     <p>Each plugin also exposes its raw constructor on a <code>Constructor</code> property: <code>$.fn.popover.Constructor</code>. If you'd like to get a particular plugin instance, retrieve it directly from an element: <code>$('[rel=popover]').data('popover')</code>.</p>
 
-    <h3 id="js-noconflict">No conflict</h3>
+    <h3 id="js-noconflict">بدون برخورد</h3>
     <p>Sometimes it is necessary to use Bootstrap plugins with other UI frameworks. In these circumstances, namespace collisions can occasionally occur. If this happens, you may call <code>.noConflict</code> on the plugin you wish to revert the value of.</p>
 {% highlight js %}
 var bootstrapButton = $.fn.button.noConflict() // return $.fn.button to previously assigned value
 $.fn.bootstrapBtn = bootstrapButton            // give $().bootstrapBtn the Bootstrap functionality
 {% endhighlight %}
 
-    <h3 id="js-events">Events</h3>
+    <h3 id="js-events">رویدادها</h3>
     <p>Bootstrap provides custom events for most plugin's unique actions. Generally, these come in an infinitive and past participle form - where the infinitive (ex. <code>show</code>) is triggered at the start of an event, and its past participle form (ex. <code>shown</code>) is trigger on the completion of an action.</p>
     <p>As of 3.0.0, all Bootstrap events are namespaced.</p>
     <p>All infinitive events provide <code>preventDefault</code> functionality. This provides the ability to stop the execution of an action before it starts.</p>
@@ -84,7 +84,7 @@ $('#myModal').on('show.bs.modal', function (e) {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="transitions">Transitions <small>transition.js</small></h1>
+      <h1 id="transitions">انتقال‌ها <small>transition.js</small></h1>
     </div>
     <h3>About transitions</h3>
     <p>For simple transition effects, include <code>transition.js</code> once alongside the other JS files. If you're using the compiled (or minified) <code>bootstrap.js</code>, there is no need to include this&mdash;it's already there.</p>
@@ -98,10 +98,10 @@ $('#myModal').on('show.bs.modal', function (e) {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="modals">Modals <small>modal.js</small></h1>
+      <h1 id="modals">مُدال‌ها <small>modal.js</small></h1>
     </div>
 
-    <h2 id="modals-examples">Examples</h2>
+    <h2 id="modals-examples">نمونه‌ها</h2>
     <p>Modals are streamlined, but flexible, dialog prompts with the minimum required functionality and smart defaults.</p>
 
     <h3>Static example</h3>
@@ -226,7 +226,7 @@ $('#myModal').on('show.bs.modal', function (e) {
       <p>Additionally, you may give a description of your modal dialog with <code>aria-describedby</code> on <code>.modal</code>.</p>
     </div>
 
-    <h2 id="modals-usage">Usage</h2>
+    <h2 id="modals-usage">استفاده</h2>
 
     <h3>Via data attributes</h3>
     <p>Activate a modal without writing JavaScript. Set <code>data-toggle="modal"</code> on a controller element, like a button, along with a <code>data-target="#foo"</code> or <code>href="#foo"</code> to target a specific modal to toggle.</p>
@@ -348,10 +348,10 @@ $('#myModal').on('hidden.bs.modal', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="dropdowns">Dropdowns <small>dropdown.js</small></h1>
+      <h1 id="dropdowns">افتادنی‌ها <small>dropdown.js</small></h1>
     </div>
 
-    <h2 id="dropdowns-examples">Examples</h2>
+    <h2 id="dropdowns-examples">نمونه‌ها</h2>
     <p>Add dropdown menus to nearly anything with this simple plugin, including the navbar, tabs, and pills.</p>
 
     <h3>Within a navbar</h3>
@@ -443,7 +443,7 @@ $('#myModal').on('hidden.bs.modal', function () {
     </div> <!-- /example -->
 
 
-    <h2 id="dropdowns-usage">Usage</h2>
+    <h2 id="dropdowns-usage">استفاده</h2>
 
     <h3>Via data attributes</h3>
     <p>Add <code>data-toggle="dropdown"</code> to a link or button to toggle a dropdown.</p>
@@ -520,11 +520,11 @@ $('#myDropdown').on('show.bs.dropdown', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="scrollspy">ScrollSpy <small>scrollspy.js</small></h1>
+      <h1 id="scrollspy">اسکرول جاسوس <small>scrollspy.js</small></h1>
     </div>
 
 
-    <h2 id="scrollspy-examples">Example in navbar</h2>
+    <h2 id="scrollspy-examples">نمونه‌ها</h2>
     <p>The ScrollSpy plugin is for automatically updating nav targets based on scroll position. Scroll the area below the navbar and watch the active class change. The dropdown sub items will be highlighted as well.</p>
     <div class="bs-example">
       <nav id="navbar-example2" class="navbar navbar-default navbar-static" role="navigation">
@@ -570,7 +570,7 @@ $('#myDropdown').on('show.bs.dropdown', function () {
     </div><!-- /example -->
 
 
-    <h2 id="scrollspy-usage">Usage</h2>
+    <h2 id="scrollspy-usage">استفاده</h2>
 
     <h3>Via data attributes</h3>
     <p>To easily add scrollspy behavior to your topbar navigation, add <code>data-spy="scroll"</code> to the element you want to spy on (most typically this would be the <code>&lt;body&gt;</code>. Then add the <code>data-target</code> attribute with the ID or class of the parent element of any Bootstrap <code>.nav</code> component.</p>
@@ -654,10 +654,10 @@ $('#myScrollspy').on('activate.bs.scrollspy', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="tabs">Togglable tabs <small>tab.js</small></h1>
+      <h1 id="tabs">تب‌ها <small>tab.js</small></h1>
     </div>
 
-    <h2 id="tabs-examples">Example tabs</h2>
+    <h2 id="tabs-examples">نمونه‌ها</h2>
     <p>Add quick, dynamic tab functionality to transition through panes of local content, even via dropdown menus.</p>
     <div class="bs-example bs-example-tabs">
       <ul id="myTab" class="nav nav-tabs">
@@ -688,7 +688,7 @@ $('#myScrollspy').on('activate.bs.scrollspy', function () {
     </div><!-- /example -->
 
 
-    <h2 id="tabs-usage">Usage</h2>
+    <h2 id="tabs-usage">استفاده</h2>
     <p>Enable tabbable tabs via JavaScript (each tab needs to be activated individually):</p>
 {% highlight js %}
 $('#myTab a').click(function (e) {
@@ -798,10 +798,10 @@ $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="tooltips">Tooltips <small>tooltip.js</small></h1>
+      <h1 id="tooltips">بالُنک‌ها <small>tooltip.js</small></h1>
     </div>
 
-    <h2 id="tooltips-examples">Examples</h2>
+    <h2 id="tooltips-examples">نمونه‌ها</h2>
     <p>Inspired by the excellent jQuery.tipsy plugin written by Jason Frame; Tooltips are an updated version, which don't rely on images, use CSS3 for animations, and data-attributes for local title storage.</p>
     <p>Hover over the links below to see tooltips:</p>
     <div class="bs-example tooltip-demo">
@@ -828,7 +828,7 @@ $('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
       <p>To add a tooltip to a <code>disabled</code> or <code>.disabled</code> element, put the element inside of a <code>&lt;div&gt;</code> or <code>&lt;span&gt;</code>, and apply the tooltip to that element instead.</p>
     </div>
 
-    <h2 id="tooltips-usage">Usage</h2>
+    <h2 id="tooltips-usage">استفاده</h2>
     <p>Trigger the tooltip via JavaScript:</p>
 {% highlight js %}
 $('#example').tooltip(options)
@@ -975,10 +975,10 @@ $('#myTooltip').on('hidden.bs.tooltip', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="popovers">Popovers <small>popover.js</small></h1>
+      <h1 id="popovers">پوب‌ها <small>popover.js</small></h1>
     </div>
 
-    <h2 id="popovers-examples">Examples</h2>
+    <h2 id="popovers-examples">نمونه‌ها</h2>
     <p>Add small overlays of content, like those on the iPad, to any element for housing secondary information.</p>
 
     <div class="bs-callout bs-callout-danger">
@@ -1056,7 +1056,7 @@ $('#myTooltip').on('hidden.bs.tooltip', function () {
     </div><!-- /example -->
 
 
-    <h2 id="popovers-usage">Usage</h2>
+    <h2 id="popovers-usage">استفاده</h2>
     <p>Enable popovers via JavaScript:</p>
     {% highlight js %}$('#example').popover(options){% endhighlight %}
 
@@ -1203,11 +1203,11 @@ $('#myPopover').on('hidden.bs.popover', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="alerts">Alert messages <small>alert.js</small></h1>
+      <h1 id="alerts">پیام‌های اخطار <small>alert.js</small></h1>
     </div>
 
 
-    <h2 id="alerts-examples">Example alerts</h2>
+    <h2 id="alerts-examples">نمونه‌ها</h2>
     <p>Add dismiss functionality to all alert messages with this plugin.</p>
     <div class="bs-example">
       <div class="alert alert-warning fade in">
@@ -1229,7 +1229,7 @@ $('#myPopover').on('hidden.bs.popover', function () {
     </div><!-- /example -->
 
 
-    <h2 id="alerts-usage">Usage</h2>
+    <h2 id="alerts-usage">استفاده</h2>
     <p>Enable dismissal of an alert via JavaScript:</p>
     {% highlight js %}$(".alert").alert(){% endhighlight %}
 
@@ -1282,10 +1282,10 @@ $('#my-alert').bind('closed.bs.alert', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="buttons">Buttons <small>button.js</small></h1>
+      <h1 id="buttons">دکمه‌ها <small>button.js</small></h1>
     </div>
 
-    <h2 id="buttons-examples">Example uses</h2>
+    <h2 id="buttons-examples">نمونه‌ها</h2>
     <p>Do more with buttons. Control button states or create groups of buttons for more components like toolbars.</p>
 
     <h4>Stateful</h4>
@@ -1369,7 +1369,7 @@ $('#my-alert').bind('closed.bs.alert', function () {
 {% endhighlight %}
 
 
-    <h2 id="buttons-usage">Usage</h2>
+    <h2 id="buttons-usage">استفاده</h2>
     <p>Enable buttons via JavaScript:</p>
 {% highlight js %}
 $('.btn-group').button()
@@ -1424,7 +1424,7 @@ $('.btn-group').button()
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="collapse">Collapse <small>collapse.js</small></h1>
+      <h1 id="collapse">فروریختنی <small>collapse.js</small></h1>
     </div>
 
     <h3>About</h3>
@@ -1435,7 +1435,7 @@ $('.btn-group').button()
       <p>Collapse requires the <a href="#transitions">transitions plugin</a> to be included in your version of Bootstrap.</p>
     </div>
 
-    <h2 id="collapse-examples">Example accordion</h2>
+    <h2 id="collapse-examples">نمونه‌ها</h2>
     <p>Using the collapse plugin, we built a simple accordion by extending the panel component.</p>
 
     <div class="bs-example">
@@ -1541,7 +1541,7 @@ $('.btn-group').button()
 {% endhighlight %}
 
 
-    <h2 id="collapse-usage">Usage</h2>
+    <h2 id="collapse-usage">استفاده</h2>
 
     <h3>Via data attributes</h3>
     <p>Just add <code>data-toggle="collapse"</code> and a <code>data-target</code> to element to automatically assign control of a collapsible element. The <code>data-target</code> attribute accepts a CSS selector to apply the collapse to. Be sure to add the class <code>collapse</code> to the collapsible element. If you'd like it to default open, add the additional class <code>in</code>.</p>
@@ -1646,10 +1646,10 @@ $('#myCollapsible').on('hidden.bs.collapse', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="carousel">Carousel <small>carousel.js</small></h1>
+      <h1 id="carousel">چرخ و فلک <small>carousel.js</small></h1>
     </div>
 
-    <h2 id="carousel-examples">Examples</h2>
+    <h2 id="carousel-examples">نمونه‌ها</h2>
     <p>The slideshow below shows a generic plugin and component for cycling through elements like a carousel.</p>
     <div class="bs-example">
       <div id="carousel-example-generic" class="carousel slide bs-docs-carousel-example">
@@ -1766,7 +1766,7 @@ $('#myCollapsible').on('hidden.bs.collapse', function () {
   <p>The carousel component is generally not compliant with accessibility standards. If you need to be compliant, please consider other options for presenting your content.</p>
 </div>
 
-    <h2 id="carousel-usage">Usage</h2>
+    <h2 id="carousel-usage">استفاده</h2>
 
     <h3>Via data attributes</h3>
     <p>Use data attributes to easily control the position of the carousel. <code>data-slide</code> accepts the keywords <code>prev</code> or <code>next</code>, which alters the slide position relative to its current position. Alternatively, use <code>data-slide-to</code> to pass a raw slide index to the carousel <code>data-slide-to="2"</code>, which shifts the slide position to a particular index beginning with <code>0</code>.</p>
@@ -1874,15 +1874,15 @@ $('#myCarousel').on('slide.bs.carousel', function () {
   ================================================== -->
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="affix">Affix <small>affix.js</small></h1>
+      <h1 id="affix">پیوست <small>affix.js</small></h1>
     </div>
 
-    <h2 id="affix-examples">Example</h2>
+    <h2 id="affix-examples">نمونه‌ها</h2>
     <p>The subnavigation on the left is a live demo of the affix plugin.</p>
 
     <hr class="bs-docs-separator">
 
-    <h2 id="affix-usage">Usage</h2>
+    <h2 id="affix-usage">استفاده</h2>
 
     <h3>Via data attributes</h3>
     <p>To easily add affix behavior to any element, just add <code>data-spy="affix"</code> to the element you want to spy on. Then use offsets to define when to toggle the pinning of an element on and off.</p>
