translation of customize titles to persian

--- a/customize.html
+++ b/customize.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Customize and download
+title: سفارشی و دانلود کنید
 slug: customize
-lead: Customize Bootstrap's components, LESS variables, and jQuery plugins to get your very own version.
+lead: اجزا و متغیرهای LESS بوت‌استرپ و پلاگین‌های جی‌کوئری را سفارشی کنید و نسخهٔ خودتان را بسازید.
 base_url: "../"
 ---
 
@@ -10,8 +10,8 @@ base_url: "../"
 <form class="bs-customizer" role="form">
   <div class="bs-docs-section" id="less-section">
     <div class="page-header">
-      <button class="btn btn-default toggle" type="button">Toggle all</button>
-      <h1 id="less">LESS files</h1>
+      <button class="btn btn-default toggle" type="button">تغییر وضعیت همه</button>
+      <h1 id="less">فایل‌های LESS</h1>
     </div>
     <p class="lead">Choose which LESS files to compile into your custom build of Bootstrap. Not sure which files to use? Read through the <a href="../css/">CSS</a> and <a href="../components/">Components</a> pages in the docs.</p>
 
@@ -241,7 +241,7 @@ base_url: "../"
   <div class="bs-docs-section" id="plugin-section">
     <div class="page-header">
       <button class="btn btn-default toggle" type="button">Toggle all</button>
-      <h1 id="plugins">jQuery plugins</h1>
+      <h1 id="plugins">پلاگین‌های جی‌کوئری</h1>
     </div>
     <p class="lead">Choose which jQuery plugins should be included in your custom JavaScript files. Unsure what to include? Read the <a href="../javascript/">JavaScript</a> page in the docs.</p>
     <div class="row">
@@ -341,11 +341,11 @@ base_url: "../"
   <div class="bs-docs-section" id="less-variables-section">
     <div class="page-header">
       <button class="btn btn-default toggle" type="button">Reset to defaults</button>
-      <h1 id="less-variables">LESS variables</h1>
+      <h1 id="less-variables">متغیرهای LESS</h1>
     </div>
     <p class="lead">Customize LESS variables to define colors, sizes and more inside your custom CSS stylesheets.</p>
 
-    <h2 id="variables-basics">Basics</h2>
+    <h2 id="variables-basics">پایه‌ها</h2>
 
     <h3>Body background</h3>
     <div class="row">
@@ -562,7 +562,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-buttons">Buttons</h2>
+    <h2 id="variables-buttons">دکمه‌ها</h2>
     <p>For each of Bootstrap's buttons, define text, background and border color.</p>
     <div class="row">
       <div class="col-lg-6">
@@ -616,7 +616,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-form-states">Form states and alerts</h2>
+    <h2 id="variables-form-states">وضعیت‌های فرم و اخطارها</h2>
     <p>Define colors for form feedback states and, by default, alerts.</p>
     <div class="row">
       <div class="col-lg-6">
@@ -653,7 +653,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-alerts">Alerts</h2>
+    <h2 id="variables-alerts">اخطارها</h2>
     <p>Define alert colors, border radius, and padding.</p>
     <h4>Border radius</h4>
     <label>@alert-padding</label>
@@ -695,7 +695,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-navbar">Navbar</h2>
+    <h2 id="variables-navbar">نوارهای ناوبری</h2>
     <div class="row">
       <div class="col-lg-6">
         <h3>Default navbar</h3>
@@ -780,7 +780,7 @@ base_url: "../"
     </div>
 
 
-    <h2 id="variables-nav">Nav</h2>
+    <h2 id="variables-nav">ناوبری‌ها</h2>
 
     <h3>Default nav</h3>
     <div class="row">
@@ -825,7 +825,7 @@ base_url: "../"
     </div>
 
 
-    <h2 id="variables-tables">Tables</h2>
+    <h2 id="variables-tables">جدول‌ها</h2>
     <div class="row">
       <div class="col-lg-6">
         <label>@table-bg</label>
@@ -845,7 +845,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-forms">Forms</h2>
+    <h2 id="variables-forms">فرم‌ها</h2>
     <div class="row">
       <div class="col-lg-6">
         <h3>Inputs</h3>
@@ -887,7 +887,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-dropdowns">Dropdowns</h2>
+    <h2 id="variables-dropdowns">افتادنی‌ها</h2>
     <div class="row">
       <div class="col-lg-6">
         <h3>Dropdown menu</h3>
@@ -936,7 +936,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-panels-wells">Panels and wells</h2>
+    <h2 id="variables-panels-wells">پنل‌ها و چاه‌ها</h2>
     <h3>Common panel styles</h3>
     <div class="row">
       <div class="col-lg-6">
@@ -1007,11 +1007,11 @@ base_url: "../"
     <label>@well-bg</label>
     <input type="text" class="form-control" placeholder="#f5f5f5" data-var="@well-bg">
 
-    <h2 id="variables-accordion">Accordion</h2>
+    <h2 id="variables-accordion">فروریختنی</h2>
     <label>@accordion-border-bg</label>
     <input type="text" class="form-control" placeholder="#e5e5e5" data-var="@accordion-border-bg">
 
-    <h2 id="variables-badges">Badges</h2>
+    <h2 id="variables-badges">نشان‌ها</h2>
     <div class="row">
       <div class="col-lg-6">
         <label>@badge-color</label>
@@ -1034,7 +1034,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-breadcrumbs">Breadcrumbs</h2>
+    <h2 id="variables-breadcrumbs">تکه کیک‌ها</h2>
     <div class="row">
       <div class="col-lg-4">
         <label>@breadcrumb-color</label>
@@ -1053,7 +1053,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-jumbotron">Jumbotron</h2>
+    <h2 id="variables-jumbotron">جامبو</h2>
     <div class="row">
       <div class="col-lg-3">
         <label>@jumbotron-padding</label>
@@ -1073,7 +1073,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-modals">Modals</h2>
+    <h2 id="variables-modals">مُدال‌ها</h2>
     <div class="row">
       <div class="col-lg-4">
         <label>@modal-inner-padding</label>
@@ -1122,7 +1122,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-carousel">Carousel</h2>
+    <h2 id="variables-carousel">چرخ و فلک</h2>
     <label>@carousel-text-shadow</label>
     <input type="text" class="form-control" placeholder="0 1px 2px rgba(0,0,0,.6)" data-var="@carousel-text-shadow">
     <label>@carousel-control-color</label>
@@ -1134,7 +1134,7 @@ base_url: "../"
     <label>@carousel-caption-color</label>
     <input type="text" class="form-control" placeholder="#fff" data-var="@carousel-caption-color">
 
-    <h2 id="variables-list-group">List group</h2>
+    <h2 id="variables-list-group">گروه‌های فهرستی</h2>
     <h3>Background</h3>
     <div class="row">
       <div class="col-lg-4">
@@ -1174,7 +1174,7 @@ base_url: "../"
     <label>@list-group-active-color</label>
     <input type="text" class="form-control" placeholder="#fff" data-var="@list-group-active-color">
     <p class="help-block">Text color of active list elements</p>
-    <h2 id="variables-thumbnails">Thumbnails</h2>
+    <h2 id="variables-thumbnails">بندانگشتی‌ها</h2>
     <div class="row">
       <div class="col-lg-6">
         <label>@thumbnail-padding</label>
@@ -1199,7 +1199,7 @@ base_url: "../"
         <p class="help-block">Custom text color for thumbnail captions</p>
       </div>
     </div>
-    <h2 id="variables-progress">Progress bars</h2>
+    <h2 id="variables-progress">نوارهای پیشرفت</h2>
     <div class="row">
       <div class="col-lg-4">
         <label>@progress-bg</label>
@@ -1244,7 +1244,7 @@ base_url: "../"
         <p class="help-block">Info progress bar text shadow</p>
       </div>
     </div>
-    <h2 id="variables-pagination">Pagination</h2>
+    <h2 id="variables-pagination">صفحه‌بندی</h2>
     <div class="row">
       <div class="col-lg-4">
         <label>@pagination-bg</label>
@@ -1272,7 +1272,7 @@ base_url: "../"
         <p class="help-block">Disabled text color</p>
       </div>
     </div>
-    <h2 id="variables-pager">Pager</h2>
+    <h2 id="variables-pager">صفحه‌بند</h2>
     <div class="row">
       <div class="col-lg-4">
         <label>@pager-border-radius</label>
@@ -1286,7 +1286,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-labels">Labels</h2>
+    <h2 id="variables-labels">برچسب‌ها</h2>
     <div class="row">
       <div class="col-lg-6">
         <label>@label-default-bg</label>
@@ -1311,7 +1311,7 @@ base_url: "../"
         <p class="help-block">Danger label background color</p>
       </div>
     </div>
-    <h2 id="variables-tooltips-popovers">Tooltips and popovers</h2>
+    <h2 id="variables-tooltips-popovers">بالُنک‌ها و پوب‌ها</h2>
     <h3>Tooltip styles</h3>
     <div class="row">
       <div class="col-lg-6">
@@ -1390,7 +1390,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-close">Close button</h2>
+    <h2 id="variables-close">دکمه بستن</h2>
     <div class="row">
       <div class="col-lg-6">
         <label>@close-color</label>
@@ -1402,7 +1402,7 @@ base_url: "../"
       </div>
     </div>
 
-    <h2 id="variables-type">Type</h2>
+    <h2 id="variables-type">نوع</h2>
     <div class="row">
       <div class="col-lg-6">
         <label>@text-muted</label>
@@ -1435,7 +1435,7 @@ base_url: "../"
         <p class="help-block">Page header border color</p>
       </div>
     </div>
-    <h2 id="variables-other">Other</h2>
+    <h2 id="variables-other">دیگر</h2>
     <div class="row">
       <div class="col-lg-6">
         <label>@hr-border</label>
@@ -1452,7 +1452,7 @@ base_url: "../"
 
   <div class="bs-docs-section">
     <div class="page-header">
-      <h1 id="download">Download</h1>
+      <h1 id="download">دانلود</h1>
     </div>
     <p class="lead">Hooray! Your custom version of Bootstrap is now ready to be compiled. Just click the button below to finish the process.</p>
     <div class="bs-customize-download">
