makeing inline-table the code.less and some minor changes

--- a/components.html
+++ b/components.html
@@ -1077,7 +1077,7 @@ base_url: "../"
             <input type="text" class="form-control">
             <div class="input-group-btn">
               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span></button>
-              <ul class="dropdown-menu pull-right" role="menu">
+              <ul class="dropdown-menu pull-left" role="menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
@@ -1111,7 +1111,7 @@ base_url: "../"
       <input type="text" class="form-control">
       <div class="input-group-btn">
         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">Action <span class="caret"></span></button>
-        <ul class="dropdown-menu pull-right">
+        <ul class="dropdown-menu pull-left">
           <li><a href="#">Action</a></li>
           <li><a href="#">Another action</a></li>
           <li><a href="#">Something else here</a></li>
@@ -1153,7 +1153,7 @@ base_url: "../"
               <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" tabindex="-1">
                 <span class="caret"></span>
               </button>
-              <ul class="dropdown-menu pull-right" role="menu">
+              <ul class="dropdown-menu pull-left" role="menu">
                 <li><a href="#">Action</a></li>
                 <li><a href="#">Another action</a></li>
                 <li><a href="#">Something else here</a></li>
@@ -2479,7 +2479,7 @@ body { padding-bottom: 70px; }
     <p>The default media allow to float a media object (images, video, audio) to the left or right of a content block.</p>
     <div class="bs-example">
       <div class="media">
-        <a class="pull-left" href="#">
+        <a class="pull-right" href="#">
           <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
         </a>
         <div class="media-body">
@@ -2488,14 +2488,14 @@ body { padding-bottom: 70px; }
         </div>
       </div>
       <div class="media">
-        <a class="pull-left" href="#">
+        <a class="pull-right" href="#">
           <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
         </a>
         <div class="media-body">
           <h4 class="media-heading">Media heading</h4>
           Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
           <div class="media">
-            <a class="pull-left" href="#">
+            <a class="pull-right" href="#">
               <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
             </a>
             <div class="media-body">
@@ -2508,7 +2508,7 @@ body { padding-bottom: 70px; }
     </div><!-- /.bs-example -->
 {% highlight html %}
 <div class="media">
-  <a class="pull-left" href="#">
+  <a class="pull-right" href="#">
     <img class="media-object" src="..." alt="...">
   </a>
   <div class="media-body">
@@ -2523,7 +2523,7 @@ body { padding-bottom: 70px; }
     <div class="bs-example">
       <ul class="media-list">
         <li class="media">
-          <a class="pull-left" href="#">
+          <a class="pull-right" href="#">
             <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
           </a>
           <div class="media-body">
@@ -2531,7 +2531,7 @@ body { padding-bottom: 70px; }
             <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
             <!-- Nested media object -->
             <div class="media">
-              <a class="pull-left" href="#">
+              <a class="pull-right" href="#">
                 <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
               </a>
               <div class="media-body">
@@ -2539,7 +2539,7 @@ body { padding-bottom: 70px; }
                 Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
                 <!-- Nested media object -->
                 <div class="media">
-                  <a class="pull-left" href="#">
+                  <a class="pull-right" href="#">
                     <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
                   </a>
                   <div class="media-body">
@@ -2551,7 +2551,7 @@ body { padding-bottom: 70px; }
             </div>
             <!-- Nested media object -->
             <div class="media">
-              <a class="pull-left" href="#">
+              <a class="pull-right" href="#">
                 <img class="media-object" data-src="holder.js/64x64" alt="Generic placeholder image" src="data:image/png;base64,">
               </a>
               <div class="media-body">
@@ -2575,7 +2575,7 @@ body { padding-bottom: 70px; }
 {% highlight html %}
 <ul class="media-list">
   <li class="media">
-    <a class="pull-left" href="#">
+    <a class="pull-right" href="#">
       <img class="media-object" src="..." alt="...">
     </a>
     <div class="media-body">
