--- a/getting-started.html
+++ b/getting-started.html
@@ -33,7 +33,7 @@ base_url: "../"
         Install with <a href="http://bower.io">Bower</a>
       </h4>
       <p>Install and manage the original files for all CSS and JavaScript, along with a local copy of the docs, using <a href="http://bower.io">Bower</a>.</p>
-      {% highlight bash %}$ bower install bootstrap{% endhighlight %}
+      {% highlight bash %}$ bower install rbootstrap{% endhighlight %}
     </div>
 
     <h3 id="download-cdn">CDN برای بوت‌استرپ</h3>
