--- a/examples/non-responsive/index.html
+++ b/examples/non-responsive/index.html
@@ -12,7 +12,7 @@
     <title>Non-responsive Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.css" rel="stylesheet">
+    <link href="../../dist/css/rbootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="non-responsive.css" rel="stylesheet">
@@ -91,6 +91,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../../assets/js/jquery.js"></script>
-    <script src="../../dist/js/bootstrap.min.js"></script>
+    <script src="../../dist/js/rbootstrap.min.js"></script>
   </body>
 </html>
